--- a/package.json
+++ b/package.json
@@ -7,5 +7,25 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pramendra Gupta",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "rescode": "^0.1.10"
+  },
+  "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-flow": "^6.8.0",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "gulp": "^3.9.1",
+    "gulp-s3-upload": "^1.6.0",
+    "gulp-watch": "^4.3.8",
+    "gulp-zip": "^3.2.0",
+    "json-loader": "^0.5.4",
+    "mocha": "^2.5.3",
+    "unminified-webpack-plugin": "^1.1.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-stream": "^3.2.0"
+  }
 }
